--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ h1,
 h2,
 h3 {
   margin-top: 0;
+  margin-bottom: 0;
 }
 .section {
   padding: 120px 0;
@@ -33,33 +34,48 @@ ul {
   margin: 0;
   padding: 0;
 }
-.link {
+a {
   text-decoration: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Header */
 
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
 .header-container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e7e9fc;
+  /* border-bottom: 1px solid #e7e9fc; */
 }
 .header-nav {
   display: flex;
+  align-items: center;
+  /* flex-grow:1 */
 }
 .header-menu {
   display: flex;
   gap: 40px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+
+  /* remove */
+  /* padding-top: 24px;*/
+  /* padding-bottom: 24px; */
 }
 
 .logo {
   font-family: 'Raleway', sans-serif;
   color: var(--color-brand);
+  text-transform: uppercase;
   line-height: 1.33;
   letter-spacing: 0.03em;
   font-weight: 800;
+}
+.header .logo {
   margin-right: 76px;
   padding: 24px 0;
 }
@@ -75,6 +91,18 @@ ul {
   font-size: 16px;
   font-weight: 500;
 
+  display: block;
+  padding: 24px 0;
+}
+.header-contacts {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-primary);
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 400;
+
+  display: block;
   padding: 24px 0;
 }
 
@@ -82,12 +110,17 @@ ul {
 .header-link:focus {
   color: var(--color-secondary);
 }
+.header-contacts:hover,
+.header-contacts:focus {
+  color: var(--color-secondary);
+}
 .contacts-list {
   display: flex;
   gap: 40px;
-  margin-left: 332px;
   align-items: center;
-  padding: 24px 0;
+}
+.address {
+  margin-left: auto;
 }
 
 /* Hero */
@@ -119,6 +152,8 @@ ul {
   color: var(--color-primary-inverted);
   cursor: pointer;
   border-radius: 4px;
+  border: 1px solid transparent;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -137,12 +172,17 @@ ul {
   display: flex;
   gap: 24px;
 }
+.feature-item {
+  flex-basis: calc((100% - 3 * 24px) / 4);
+}
 .feature-title {
   color: var(--color-primary-dark);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+
+  margin-bottom: 8px;
 }
 .feature-text {
   font-size: 16px;
@@ -164,6 +204,9 @@ ul {
 .img-list {
   display: flex;
   gap: 24px;
+}
+.img-item {
+  flex-basis: calc((100% - 2 * 24px) / 3);
 }
 .sect-two {
   padding-top: 0;
@@ -187,6 +230,8 @@ ul {
 }
 .team-card {
   background-color: var(--color-primary-inverted);
+  border-radius: 30px 30px 4px 4px;
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .card-list-container {
   display: flex;
@@ -216,7 +261,7 @@ footer {
   background-color: var(--color-primary-dark);
   padding-bottom: 100px;
   padding-top: 100px;
-  padding-left: 156px;
+  /* padding-left: 156px; */
 }
 .logo-foot {
   color: #e7e9fc;
@@ -233,7 +278,7 @@ footer {
 .filters-btn {
   font-family: inherit;
   background: #f4f4fd;
-  border: 1px solid;
+  border: 1px solid #e7e9fc;
   border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
@@ -243,17 +288,18 @@ footer {
   letter-spacing: 0.04em;
   padding: 12px 24px;
   align-items: center;
-  margin-bottom: 72px;
 }
 .filters-btn:hover,
 .filters-btn:focus {
   color: var(--color-primary-inverted);
   background: var(--color-secondary);
+  border-color: transparent;
 }
 .filters-container {
   display: flex;
   gap: 24px;
   justify-content: center;
+  margin-bottom: 72px;
 }
 
 /* Portfolio card */
@@ -263,7 +309,9 @@ footer {
   flex-wrap: wrap;
 
   gap: 48px 24px;
-  flex-basis: calc((100% - 48px) / 3);
+}
+.portfolio-item {
+  flex-basis: calc((100% - 2 * 24px) / 3);
 }
 .title-card {
   color: var(--color-primary-dark);
@@ -271,6 +319,7 @@ footer {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .card-descr {
   color: var(--color-primary);
